# Transcripts_explorer

./: .gitattributes  .gitignore  README.md  convert_fasta_to_cache.py  convert_linux_db_to_win.py  convert_to_anndata.py  expression.py  extract_sequences.py  generating_necessary_files.ipynb  generating_necessary_files.py  generating_necessary_files_test.py  pyproject.toml  requirements.txt  topology.py
app/: README.md  app.py  plots_generation.py
app/files_for_plots/: TCGA_GTEx_plotting_data.bak  TCGA_GTEx_plotting_data.db  TCGA_GTEx_plotting_data.dir  deeploc2_output.db  deeploc2_output.dir  membrane_topology_objects.bak  membrane_topology_objects.db  membrane_topology_objects.dir  transcripts_to_isoforms_mapping.bak  transcripts_to_isoforms_mapping.db  transcripts_to_isoforms_mapping.dir
app/files_for_plots/CD20/: TCGA_GTEx_plotting_data.csv  membrane_topology.csv  sequences_data.json  transcript_to_isoform_mapping.json
app/files_for_plots/HER2/: TCGA_GTEx_plotting_data.csv  membrane_topology.csv  sequences_data.json  transcript_to_isoform_mapping.json
app/scripts/: plots_generation.py
docs/: app.json
scripts/: expression.py  extract_sequences.py  genes.txt  predict_api.py  topology.py
scripts/files_genes/: Homo_sapiens.GRCh38.pep.all.fa  already_explored_genes.pkl
