[project]
name = "transcripts-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.25"
dependencies = [
    "anndata>=0.10.9",
    "biolib>=0.1.9",
    "biopython==1.79",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "cycler==0.11.0",
    "cython==0.29.37",
    "deeploc2",
    "fair-esm==0.4.0",
    "fastparquet>=2024.11.0",
    "fonttools==4.38.0",
    "future==0.18.2",
    "h5py==3.7.0",
    "idna==3.4",
    "kiwisolver==1.4.4",
    "matplotlib==3.5.2",
    "numpy==1.23.4",
    "peptidebuilder==1.1.0",
    "pillow==9.3.0",
    "pkgconfig==1.5.5",
    "psutil>=7.2.2",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytorch-lightning<1.5.0",
    "requests==2.28.1",
    "seaborn>=0.13.2",
    "setuptools<82",
    "six==1.16.0",
    "tokenizers<0.14.0",
    "torch==1.7.1+cpu",
    "torchmetrics<0.8.0",
    "tqdm==4.64.1",
    "transformers<4.30.0",
    "urllib3==1.26.12",
    "wheel>=0.47.0",
    "xenapython>=1.0.14",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp39-cp39-linux_x86_64.whl" }
deeploc2 = { path = "deeploc-2.1.All.tar.gz" }
